--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,7 +44,7 @@
                             <label for="confirmation">Confirm New Password</label>
                             <input type="password" name="confirmation" id="confirmation" class="form-control">
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Change Password</button>
+                        <button type="submit" name="change_password" class="btn btn-primary w-100">Change Password</button>
                     </form>
                 </div>
             </div>
