--- a/templates/register.html
+++ b/templates/register.html
@@ -14,6 +14,7 @@
                 </div>
                 <div class="card-body">
                     <form action="/register" method="post">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <div class="mb-3">
                             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" required>
                         </div>
