--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,14 @@
                 </div>
                 <div class="card-body">
                     <form action="/login" method="post">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <div class="mb-3">
-                            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" required>
+                            <label for="username">Username</label> 
+                            <input autocomplete="off" autofocus class="form-control" name="username" id="username" placeholder="Username" type="text" required>
                         </div>
                         <div class="mb-3">
-                            <input class="form-control" name="password" placeholder="Password" type="password" required>
+                            <label for="password">Password</label>
+                            <input class="form-control" name="password" id="password" placeholder="Password" type="password" required>
                         </div>
                         <button class="btn btn-primary w-100" type="submit">Log In</button>
                     </form>
