--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <link href="/static/favicon.ico" rel="icon">
         <link href="/static/styles.css" rel="stylesheet">
@@ -20,17 +21,17 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/add_expense"><i class="fas fa-plus-circle"></i> Add Expense</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history"><i class="fas fa-history"></i> History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/add_expense"><i class="fas fa-plus-circle" aria-hidden="true"></i> Add Expense</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history"><i class="fas fa-history" aria-hidden="true"></i> History</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/profile"><i class="fas fa-user"></i> Profile</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/profile"><i class="fas fa-user" aria-hidden="true"></i> Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Log Out</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/register"><i class="fas fa-user-plus"></i> Register</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/register"><i class="fas fa-user-plus" aria-hidden="true"></i> Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-sign-in-alt" aria-hidden="true"></i> Log In</a></li>
                         </ul>
                     {% endif %}
                 </div>
@@ -53,7 +54,7 @@
             <form action="https://validator.w3.org/check" class="text-center" enctype="multipart/form-data" method="post" target="_blank">
                 <input name="doctype" type="hidden" value="HTML5">
                 <input name="fragment" type="hidden">
-                <input alt="Validate" src="/static/I_heart_validator.png" type="image">
+                <input alt="W3C HTML5 Validator" src="/static/I_heart_validator.png" type="image">
             </form>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
